Fix workflow to allow inline comments even when security analysis fails
Key changes:
- Added continue-on-error: true to Security Analysis step
- Store final exit code in environment variable instead of exiting immediately
- Use if: always() conditions to ensure comment steps run regardless
- Add final step to set the proper exit code after all comments are posted
- This ensures inline comments are posted even when critical vulnerabilities are found

--- a/.github/workflows/security-paranoia-bot.yml
+++ b/.github/workflows/security-paranoia-bot.yml
@@ -42,6 +42,7 @@ jobs:
       
       - name: Security Analysis
         id: security-scan
+        continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ github.token }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
@@ -201,19 +202,20 @@ jobs:
           
           echo "💾 Security report saved"
           
-          # Set output for status check
+          # Store the build status for later steps
           if [[ $CRITICAL_COUNT -gt 0 ]]; then
             echo "❌ BUILD FAILED: $CRITICAL_COUNT critical vulnerabilities detected"
             echo "build_status=failure" >> $GITHUB_OUTPUT
-            exit 1
+            echo "FINAL_EXIT_CODE=1" >> $GITHUB_ENV
           else
             echo "✅ BUILD PASSED: No critical vulnerabilities"
             echo "build_status=success" >> $GITHUB_OUTPUT
+            echo "FINAL_EXIT_CODE=0" >> $GITHUB_ENV
           fi
       
       - name: Upload Security Report
-        uses: actions/upload-artifact@v4
         if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: security-analysis-report
           path: |
@@ -501,3 +503,15 @@ jobs:
               console.log('- Rate limiting');
               console.log('- File permissions');
             }
+      
+      - name: Set Final Exit Code
+        if: always()
+        run: |
+          # Use the exit code determined in the Security Analysis step
+          if [[ "${FINAL_EXIT_CODE:-0}" == "1" ]]; then
+            echo "❌ Workflow failing due to critical vulnerabilities"
+            exit 1
+          else
+            echo "✅ Workflow passing - no critical vulnerabilities"
+            exit 0
+          fi
