Fix ESM import error in @octokit/rest by using CommonJS-compatible version
- Pin @octokit/rest to version 19.0.13 which supports CommonJS require()
- This fixes the "Error [ERR_REQUIRE_ESM]: require() of ES Module" error
- The analysis should now properly scan PR files for vulnerabilities

--- a/.github/workflows/security-paranoia-bot.yml
+++ b/.github/workflows/security-paranoia-bot.yml
@@ -57,8 +57,9 @@ jobs:
         run: |
           echo "📦 Installing security analysis dependencies..."
           npm init -y
+          # Use an older version of @octokit/rest that supports CommonJS
           npm install --save-dev \
-            @octokit/rest \
+            @octokit/rest@19.0.13 \
             js-yaml \
             eslint \
             eslint-plugin-security \
